# CrimesNews

./: .gitignore  Core.py  CrimeNews.py  Crimes-News-Gui.py  CrimesNews-Cli.py  CrimesNews-Gui.py  CrimesNews.py  Dockerfile  Executar.py  GEMINI.md  Streamlit.py  app.py  app.yaml  docker-compose.yml  plan.md  pyproject.toml  requirements.txt
.github/workflow/: pyinstaller.yml
.github/workflows/: pyinstaller.yml
