[tool.poetry]
name = "crimesnews"
version = "0.1.0"
description = ""
authors = ["Daniel Fonseca Alves <dalraf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.15.1"
feedparser = "^6.0.10"
gspread = "^5.7.1"
beautifulsoup4 = "^4.11.1"
openpyxl = "^3.0.10"
spacy = "^3.5.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
